# diff-gaussian-rasterization

./: pyproject.toml  rasterize_points.cu  rasterize_points.h  setup.py
cuda_rasterizer/: auxiliary.h  backward.cu  backward.h  config.h  forward.cu  forward.h  rasterizer.h  rasterizer_impl.cu  rasterizer_impl.h
diff_gaussian_rasterization/: __init__.py
