[build-system]
requires = ["setuptools>=61.0", "wheel", "torch>=1.8"]
build-backend = "setuptools.build_meta"

[project]
name = "diff_gaussian_rasterization"
dynamic = ["version"]
description = "Differentiable Gaussian Rasterization for Python with CUDA support"
readme = "README.md"
requires-python = ">=3.10"
license-files = ["LICENSE.md"]
authors = [
    { name = "George Drettakis", email = "george.drettakis@inria.fr" },
    { name = "Oleg Sémery", email = "osemery@gmail.com" },
]
urls = { Homepage = "https://github.com/osmr/diff-gaussian-rasterization" }
keywords = ["gaussian splatting", "3dgs", "3d reconstruction", "image processing", "CUDA"]
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Science/Research',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3',
    'Topic :: Scientific/Engineering :: Image Processing',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
]
dependencies = [
    "torch>=1.8",
]

[tool.wheel]
universal = true

[tool.setuptools.dynamic]
version = {attr = "diff_gaussian_rasterization.__version__"}

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["others", "*.others", "others.*", "*.others.*"]
